// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build order of notifications, *with* CSS inlining and sitemap 1`] = `
Array [
  "Compiling css ...",
  "Finished compiling css in 0ms",
  "Bundling files for the browser ...",
  "Finished bundling files for the browser in 5ms",
  "Processing files for static HTML ...",
  "Finished processing files for static HTML in 5ms",
  "Copying non-page files ...",
  "Finished copying non-page files in 0ms",
  "Writing static html ...",
  "Finished writing static HTML in 0ms",
  "Inlining css in static html ...",
  "CSS inlining message 1",
  "CSS inlining message 2",
  "Finished inlining CSS in static HTML in 0ms",
  "Building sitemap ...",
  "Finished building sitemap in 0ms",
  "Cleaning up temporary files ...",
  "Starting build ...",
  "Finished cleaning up temporary files in 0ms",
  "Finished build in 0ms",
]
`;

exports[`build order of notifications, without CSS inlining or sitemap 1`] = `
Array [
  "Bundling files for the browser ...",
  "Finished bundling files for the browser in 5ms",
  "Processing files for static HTML ...",
  "Finished processing files for static HTML in 5ms",
  "Copying non-page files ...",
  "Finished copying non-page files in 0ms",
  "Writing static html ...",
  "Finished writing static HTML in 0ms",
  "Cleaning up temporary files ...",
  "Starting build ...",
  "Finished cleaning up temporary files in 0ms",
  "Finished build in 0ms",
]
`;
